--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
 
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.css">
+   
+    <link href="css/style.css" rel="stylesheet">
+    <link rel="icon" href="images/Layer 1 (8).png">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/owl.carousel.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
@@ -34,14 +42,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
         integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2"
         crossorigin="anonymous"></script>
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/owl.carousel.js"></script>
-    <link href="css/style.css" rel="stylesheet">
-    <link rel="icon" href="images/Layer 1 (8).png">
-    <title>Salon Shevi</title>
+    <title>Salon git remote add origin https://github.com/harishankarprajapati/Salon-Shevi.gitShevi</title>
 </head>
 
 <body>
@@ -211,15 +212,98 @@
                     <img class="sec-img2 pt-5 text-center" src="images/Rectangle 2.png" alt="">
                     <h3 class="sec-who text-center">Testimonials </h3>
 
-                    <img class=" mx-auto d-block text-center" src="images/Group 9 (1).png" alt="">
-                    <p class="text-center">"Best experience ever! Cut, colour all of it..they are truly a master of their game..thier
+                    <img class=" mx-auto d-block text-center pb-3" src="images/Group 9 (1).png" alt="">
+                    <p class="text-center pl-5">"Best experience ever! Cut, colour all of it..they are truly a master of their game..thier
                         understanding of hair, texture, face shape, etc is remarkable..leave it to them and they will
                         work magic with your hair :)"</p>
+                        <p class="text-center">- MUDITA SINGH</p>
+                        <img class=" mx-auto d-block text-center pt-3" src="images/Group 9 (1).png" alt="">
                 </div>  
             </div>
         </div>
     </div>
 
+    <!-- Franchise -->
+    <div class="container-fluid pb-5 pt-5 mt-5">
+        <div class="container pb-5">      
+              <div class="row">
+            <div class="col-lg-6 mb-3">
+                <div class="container sec-fran">
+                    <div class="container">
+                        <img class="sec-imgf pt-5 " src="images/Rectangle 15.png" alt="">
+                        <h3 class="sec-who  text-light">Franchise</h3>
+                        <h1 class="text-light sec-fran-p">Become A <br>Franchise Partner</h1>
+                        <div class="pt-5 pb-5">
+                        <a href="#" class="sec-but ">Learn More</a>
+                        </div>
+                    </div>
+            </div>
+            </div>
+            <div class="col-lg-6">
+                 <div class="container sec-fran2">
+                    <div class="container">
+                        <img class="sec-imgf pt-5 " src="images/Rectangle 15.png" alt="">
+                        <h3 class="sec-who  text-light">Acadmey</h3>
+                        <h1 class="text-light sec-fran-p">Enroll For Batch <br>2022 - 2023</h1>
+                        <div class="pt-5 pb-5">
+                            <a href="#" class="sec-but ">Learn More</a>
+                            </div>
+                    </div>
+                 </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<!-- footer -->
+<footer>
+    <div class="container-fluid sec-footer pt-5">
+        <div class="accordion" id="accordionExample">
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingOne">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  Accordion Item #1
+                </button>
+              </h2>
+              <div id="collapseOne" class="accordion-collapse collapse " aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingTwo">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                  Accordion Item #2
+                </button>
+              </h2>
+              <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                </div>
+              </div>
+            </div>
+          </div>
+    </div>
+</footer>
+
+
+
+
+
+
+
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
+        integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"
+        integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+        crossorigin="anonymous"></script>
 
 </body>
 
